--- a/src/css/pages/about.styl
+++ b/src/css/pages/about.styl
@@ -1,6 +1,6 @@
 body.about 
     color: var(--main-about-primary)
-    background: var(--main-bg-about)
+    background-color: var(--main-bg-about)
 
 body.about .logo path 
     fill: var(--main-about-primary)
