--- a/src/css/pages/shop.styl
+++ b/src/css/pages/shop.styl
@@ -1,6 +1,6 @@
 body.shop 
     color: var(--main-shop-primary)
-    background: var(--main-bg-shop)
+    background-color: var(--main-bg-shop)
 
 body.shop .logo path
     fill: var(--main-shop-primary)
