--- a/src/css/pages/work.styl
+++ b/src/css/pages/work.styl
@@ -1,6 +1,6 @@
 body.work 
     color: var(--main-work-primary)
-    background: var(--main-bg-work)
+    background-color: var(--main-bg-work)
 
 body.work .logo path
     fill: var(--main-work-primary)
