--- a/src/css/pages/home.styl
+++ b/src/css/pages/home.styl
@@ -1,9 +1,13 @@
 body.front 
     color: var(--main-yellow)
-    background: var(--main-bg-color)
+    background-color: var(--main-bg-color)
 
 body.front .logo path 
     fill: var(--main-yellow)
 
 .front .header nav a
     color: var(--main-yellow)
+
+.shadow-front 
+    width: 100%
+    margin-top: -7rem
