--- a/src/css/wrapper.styl
+++ b/src/css/wrapper.styl
@@ -1,5 +1,11 @@
 .wrapper
-    padding: 9rem 4rem 0 4rem
+    padding: 9rem 2rem 0 2rem
 
 .front .wrapper 
     padding: 0
+
+body
+    background-image: url('../assets/images/grain.png')
+    background-repeat: repeat
+    background-size: 100px
+    background-blend-mode: overlay;
