--- a/src/css/elements/button.styl
+++ b/src/css/elements/button.styl
@@ -6,7 +6,8 @@
     font-weight: 400
     transition: .3s ease-in;
     display: inline-block    
-
+    background: transparent
+    
     &--outline
         border: 1px solid var(--btn-color)
 
