--- a/assets/main.css
+++ b/assets/main.css
@@ -74,7 +74,8 @@ h5 {
   font-family: p22-mackinac-pro, serif;
   font-weight: 800;
 }
-h1 {
+h1,
+.heading-one {
   font-size: clamp(2.563rem, 4.6vw, 7.625rem);
   line-height: 1.1;
   margin: 0;
@@ -183,8 +184,32 @@ body.front .logo path {
   color: var(--main-yellow);
 }
 .shadow-front {
-  width: 100%;
-  margin-top: -7rem;
+  position: absolute;
+  top: -6rem;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
+.shadow-front-bottom {
+  position: absolute;
+  bottom: -6rem;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  transform: rotate(180deg);
+}
+.front-info {
+  position: relative;
+  min-height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15vw 0 12vw;
+}
+.front-info__text {
+  padding: 0 2rem;
+  text-align: center;
+  max-width: 60%;
 }
 body.shop {
   color: var(--main-shop-primary);
@@ -214,6 +239,7 @@ body.work .logo path {
   font-weight: 400;
   transition: 0.3s ease-in;
   display: inline-block;
+  background: transparent;
 }
 .btn--outline {
   border: 1px solid var(--btn-color);
