--- a/src/css/pages/home.styl
+++ b/src/css/pages/home.styl
@@ -9,5 +9,29 @@ body.front .logo path
     color: var(--main-yellow)
 
 .shadow-front 
-    width: 100%
-    margin-top: -7rem
+    position absolute
+    top: -6rem
+    left: 0
+    right: 0
+    z-index: -1
+
+.shadow-front-bottom 
+    position absolute
+    bottom: -6rem
+    left: 0
+    right: 0
+    z-index: -1
+    transform: rotate(180deg)
+
+.front-info
+    position: relative;
+    min-height: 60vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15vw 0 12vw;
+
+.front-info__text 
+    padding: 0 2rem
+    text-align: center
+    max-width: 60%
