--- a/src/css/typography.styl
+++ b/src/css/typography.styl
@@ -6,7 +6,8 @@ h5
     font-family: p22-mackinac-pro, serif;
     font-weight: 800
 
-h1 
+h1,
+.heading-one 
     font-size: clamp(2.563rem, 3.6vw + 1rem, 7.625rem)
     line-height: 1.1
     margin: 0
