--- a/src/css/pages/about.styl
+++ b/src/css/pages/about.styl
@@ -7,3 +7,6 @@ body.about .logo path
 
 .about .header nav a
     color: var(--main-about-primary)
+
+.about .header nav a::before 
+    background: var(--main-about-primary)   
