--- a/src/css/pages/home.styl
+++ b/src/css/pages/home.styl
@@ -8,6 +8,9 @@ body.front .logo path
 .front .header nav a
     color: var(--main-yellow)
 
+.front .header nav a::before 
+    background: var(--main-yellow)
+
 .shadow-front 
     position absolute
     top: -6rem
