--- a/src/css/wrapper.styl
+++ b/src/css/wrapper.styl
@@ -1,14 +1,14 @@
 .wrapper
-    padding: 9rem 2rem 0 2rem
+    padding: 9rem 2.5rem 0 2.5rem
 
-.front .wrapper 
+.front .wrapper,
+.case .wrapper
     padding: 0
 
 body
-    background-image: url('../assets/images/grain.png')
+    // background-image: url('../assets/images/grain.png')
     background-repeat: repeat
     background-size: 100px
-    background-blend-mode: overlay;
 
 img 
     max-width: 100%
