--- a/src/css/elements/button.styl
+++ b/src/css/elements/button.styl
@@ -7,10 +7,30 @@
     transition: .3s ease-in;
     display: inline-block    
     background: transparent
-    
+    font-size: clamp(1rem, .9vw + 0.5rem, 1.5rem);
+
     &--outline
         border: 1px solid var(--btn-color)
 
         &:hover
             background-color: var(--btn-color)
             color: var(--btn-text)
+
+.btn-wrapper
+    display: flex
+
+    > .btn 
+        margin-right: 2rem
+
+.btn-category 
+    display: block;
+    border-radius: 100px;
+    padding: 2px 8px;
+    font-size: 1rem;
+    line-height: 1rem;
+    border: 1px solid var(--main-work-primary);
+    margin-right: 0.5rem;
+    height: 1.5rem;
+
+    &:last-child
+        margin-right: 0
