--- a/src/css/header.styl
+++ b/src/css/header.styl
@@ -1,8 +1,8 @@
 .header 
     position: absolute;
-    left: 2rem;
-    right: 2rem;
-    top: 2rem;
+    left: 2.5rem;
+    right: 2.5rem;
+    top: 2.5rem;
     z-index: 10
     display: flex;
     justify-content: space-between
@@ -14,9 +14,33 @@
 .logo path
     transition: .3s ease-in
 
+
+.header nav .active a::before
+    transform-origin: 0% 50%;
+    transform: scale3d(1, 1, 1);
+
 .header nav a 
     font-size: clamp(1rem, 0.3vw + 1rem, 1.625rem);
     text-decoration: none
+    font-weight: 500
+    position relative
+
+    &::before 
+        content:''
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        top: 100%;
+        left: 0;
+        pointer-events: none;
+        transform-origin: 100% 50%;
+        transform: scale3d(0, 1, 1);
+        transition: transform 0.3s;
+
+    &:hover::before 
+        transform-origin: 0% 50%;
+        transform: scale3d(1, 1, 1);
+
 
 .header ul 
     list-style: none
