--- a/src/css/typography.styl
+++ b/src/css/typography.styl
@@ -6,18 +6,59 @@ h5
     font-family: p22-mackinac-pro, serif;
     font-weight: 800
 
+.big-header-one
+    font-size: clamp(3.375rem, 4.8vw + 1.25rem, 5.625rem);
+    line-height: 1.1
+    margin: 0 0 2rem
+
 h1,
 .heading-one 
     font-size: clamp(2.563rem, 3.6vw + 1rem, 7.625rem)
     line-height: 1.1
-    margin: 0
+    margin: 0 0 2rem
+    letter-spacing: .5px
 
-h2
+h2,
+.heading-two
     font-size: clamp(2rem, 3vw + 1.1rem, 5rem);
     margin: 0 0 1.5rem
     line-height: 1.1
+    letter-spacing: .5px
+
+h3,
+.heading-three
+    font-size: clamp(2rem, 3vw + 1.1rem, 5rem);
+    margin: 0 0 1rem
+    line-height: 1.1
+    letter-spacing: .5px
+
+h4,
+.heading-four 
+    font-size: clamp(1.5rem, 1.75vw + 1rem, 4rem);
+    margin: 0 0 1rem
+    line-height: 1.1
+    letter-spacing: .5px
 
 .big-paragraph
     font-size: clamp(1rem, 0.75vw + 0.75rem, 2rem);
     line-height: 1.4
     margin: 0 0 1rem
+
+p,
+.paragraph
+    font-size: clamp(1rem, 1vw + 0.5rem, 2rem);
+    margin: 0 0 1rem
+    line-height: 1.4
+
+.list
+    font-size: clamp(1rem, 1vw + 0.5rem, 2rem);
+    margin: 0 0 1rem
+    line-height: 1.4
+
+.text-link
+    font-size: clamp(1rem, 1vw + 0.5rem, 2rem);
+    margin: 0 0 1rem
+    line-height: 1.3
+
+    &:hover
+        text-decoration: none
