Styling for footer and case

--- a/src/css/loader.styl
+++ b/src/css/loader.styl
@@ -1,3 +1,9 @@
 .swup-progress-bar 
   height: 4px
   background-color: var(--main-yellow)
+
+.nori .swup-progress-bar 
+  background-color: #4050F7
+
+.work .swup-progress-bar 
+  background-color: #ff6237
