--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -5,7 +5,7 @@ body.nori
 body.nori .logo path 
     fill: #4050F7
 
-.nori a
+.nori .text-link
     color: #4050F7
 
 .nori .header nav a::before 
@@ -23,7 +23,8 @@ body.nori .logo path
         background: #1e1e1e
         margin-top: 11.112vw;
         color: #E2E2E2
-        padding-top: 5.556vw
+        padding-top: 11.112vw;
+        padding-bottom: 10rem
 
 .case-pic-big
     height: 70vh;
@@ -54,6 +55,12 @@ body.nori .logo path
 
 .col *:last-child
     margin-bottom: 0
+
+.col-3
+    grid-column: span 3;
+
+.col-5
+    grid-column: span 5;
 
 .col-6
     grid-column: span 6;
