--- a/src/css/elements/footer.styl
+++ b/src/css/elements/footer.styl
@@ -1,16 +1,53 @@
 .big-footer
     background: var(--background-footer)
+    background: linear-gradient(180deg, rgba(111,143,114,1) 60%, rgba(94,121,97,1) 60%);
     color: var(--background-footer-text)
     display: grid
     grid-template-columns: repeat(12, 1fr);
     grid-gap: 2.5rem;
-    padding-top: 5.556vw
+    padding-top: 11.112vw;
+    padding-bottom: 11.112vw;
     border-radius: 4rem 4rem 0 0
+    margin-top: -5rem
+    position relative
+    overflow: hidden
 
 .big-footer__center
     grid-column-start: 4;
     grid-column-end: 10;
     text-align: center;
 
+.footer-graphic-one
+    position: absolute;
+    left: -40px;
+    max-width: 27vw;
+    bottom: 60px;
+
+.footer-graphic-two
+    position: absolute;
+    right: -60px;
+    max-width: 23vw;
+    bottom: 120px;
+
 .post-footer
     background: var(--background-post-footer)
+    color: var(--background-footer-text)
+    display: grid
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 2.5rem;
+    padding: 4.5rem 2.5rem
+
+    ul
+        list-style: none
+        margin: 0
+
+    li:last-child a
+        margin-bottom: 0
+
+    a
+        color: currentcolor
+        text-decoration: none
+
+    .col-3 p
+        margin-top: 1rem
+
