--- a/src/css/typography.styl
+++ b/src/css/typography.styl
@@ -55,10 +55,54 @@ p,
     margin: 0 0 1rem
     line-height: 1.4
 
+.p22
+    font-family: p22-mackinac-pro, serif;
+    font-weight: 800
+
 .text-link
     font-size: clamp(1rem, 1vw + 0.5rem, 2rem);
     margin: 0 0 1rem
     line-height: 1.3
+    text-decoration: none
+    position relative
 
-    &:hover
-        text-decoration: none
+    &::before 
+        content:''
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        top: 100%;
+        left: 0;
+        pointer-events: none;
+        transform-origin: 100% 50%;
+        transform: scale3d(0, 1, 1);
+        transition: transform 0.3s;
+        background: currentcolor
+
+    &:hover::before 
+        transform-origin: 0% 50%;
+        transform: scale3d(1, 1, 1);
+
+.footer-link
+    text-decoration: none
+    position relative
+    margin-bottom: .5rem
+    display: inline-block
+
+    &::before 
+        content:''
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        border-radius: 2px
+        top: 100%;
+        left: 0;
+        pointer-events: none;
+        transform-origin: 100% 50%;
+        transform: scale3d(0, 1, 1);
+        transition: transform 0.3s;
+        background: currentcolor
+
+    &:hover::before 
+        transform-origin: 0% 50%;
+        transform: scale3d(1, 1, 1);
