Fixed bodymovin and styling, fix for cannot tween null target

--- a/src/css/header.styl
+++ b/src/css/header.styl
@@ -1,5 +1,5 @@
 .header 
-    position: absolute;
+    position: fixed;
     left: 2.5rem;
     right: 2.5rem;
     top: 2.5rem;
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between
     align-items: center
+    opacity: 1
 
 .logo
     margin: 0
