--- a/assets/main.css
+++ b/assets/main.css
@@ -65,6 +65,14 @@ a span > span {
   transform: translate3d(0, 100%, 0);
   animation-delay: 0.6s;
 }
+canvas {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.02;
+  z-index: -6;
+}
 [data-aos][data-aos][data-aos-duration="50"],
 body[data-aos-duration="50"] [data-aos] {
   transition-duration: 50ms;
@@ -1057,7 +1065,7 @@ h5 {
 }
 .big-header-one {
   font-size: clamp(3.375rem, 6.05vw, 5.625rem);
-  line-height: 1.1;
+  line-height: 1;
   margin: 0 0 2rem;
 }
 h1,
@@ -1157,7 +1165,7 @@ p,
   transform: scale3d(1, 1, 1);
 }
 .header {
-  position: absolute;
+  position: fixed;
   left: 2.5rem;
   right: 2.5rem;
   top: 2.5rem;
@@ -1165,6 +1173,7 @@ p,
   display: flex;
   justify-content: space-between;
   align-items: center;
+  opacity: 1;
 }
 .logo {
   margin: 0;
@@ -1413,7 +1422,7 @@ body.shop .logo path {
   flex-flow: wrap;
 }
 .shop-item {
-  width: calc(50% - 1.5rem);
+  width: calc(50% - 1.25rem);
   margin-right: 2.5rem;
   margin-bottom: 6vw;
   animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
