--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -59,6 +59,14 @@ h1, h2, p, li, a
             transform translate3d(0, 100%, 0)
             animation-delay: .6s
 
+canvas
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0.02;
+    z-index: -6;
+
 @keyframes slideUp
     0%
         transform translate3d(0, 100%, 0)
