--- a/src/css/elements/footer.styl
+++ b/src/css/elements/footer.styl
@@ -1,16 +1,21 @@
 .big-footer
     background: var(--background-footer)
-    background: linear-gradient(180deg, rgba(111,143,114,1) 60%, rgba(94,121,97,1) 60%);
     color: var(--background-footer-text)
     display: grid
     grid-template-columns: repeat(12, 1fr);
     grid-gap: 2.5rem;
-    padding-top: 11.112vw;
-    padding-bottom: 11.112vw;
+    padding-top: 6.112vw;
+    padding-bottom: 20vw;
     border-radius: 4rem 4rem 0 0
     margin-top: -5rem
     position relative
     overflow: hidden
+
+    &--dark
+        background: linear-gradient(180deg, rgba(111,143,114,1) 68%, rgba(94,121,97,1) 68%);
+
+    &--blue
+        background: linear-gradient(180deg, rgba(0,129,167,1) 68%, rgba(0,98,128,1) 68%);
 
 .big-footer__center
     grid-column-start: 4;
