--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -65,6 +65,14 @@ body.nori .logo path
 .col-6
     grid-column: span 6;
 
+    &--center
+        grid-column-start: 4;
+        grid-column-end: 10;
+        text-align: center
+
+.col-7
+    grid-column: span 7;
+
 .col-4
     grid-column: span 4;
 
