--- a/src/css/elements/footer.styl
+++ b/src/css/elements/footer.styl
@@ -17,6 +17,9 @@
     &--blue
         background: linear-gradient(180deg, rgba(0,129,167,1) 68%, rgba(0,98,128,1) 68%);
 
+    &--green
+        background: linear-gradient(180deg, rgba(29, 114, 96, 1) 68%, rgba(22, 99, 83, 1) 68%);
+
 .big-footer__center
     grid-column-start: 4;
     grid-column-end: 10;
