--- a/src/css/typography.styl
+++ b/src/css/typography.styl
@@ -46,13 +46,13 @@ h4,
 
 p,
 .paragraph
-    font-size: clamp(1rem, 1vw + 0.5rem, 2rem);
-    margin: 0 0 1rem
+    font-size: clamp(1rem, 1.17vw + 0.5rem, 2rem);
+    margin: 0 0 1.5rem
     line-height: 1.4
 
 .list
-    font-size: clamp(1rem, 1vw + 0.5rem, 2rem);
-    margin: 0 0 1rem
+    font-size: clamp(1rem, 1.17vw + 0.5rem, 2rem);
+    margin: 0 0 1.5rem
     line-height: 1.4
 
 .p22
@@ -82,6 +82,9 @@ p,
     &:hover::before 
         transform-origin: 0% 50%;
         transform: scale3d(1, 1, 1);
+
+.hide
+    display: none
 
 .footer-link
     text-decoration: none
