--- a/src/css/elements/footer.styl
+++ b/src/css/elements/footer.styl
@@ -20,6 +20,9 @@
     &--green
         background: linear-gradient(180deg, rgba(29, 114, 96, 1) 68%, rgba(22, 99, 83, 1) 68%);
 
+    &--margin
+        margin-top: -2rem
+        
 .big-footer__center
     grid-column-start: 4;
     grid-column-end: 10;
