--- a/src/css/pages/about.styl
+++ b/src/css/pages/about.styl
@@ -13,7 +13,7 @@ body.about .logo path
 
 .about .wrapper
     background-image: url('../assets/images/lines-bg.png')
-    background-position: 45% 0;
+    background-position: 45% -10px;
     background-size: 2759px;
     background-repeat: no-repeat;
     padding: 0
