--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -12,7 +12,7 @@ html, body
     font-size: 16px
 
 :root
-    --main-yellow: #FBF778
+    --main-yellow: #F5B1BC
     --main-bg-color: #171259
     --main-bg-work: #CDD7CF
     --main-bg-primary: #FF6237
