--- a/src/css/pages/shop.styl
+++ b/src/css/pages/shop.styl
@@ -16,6 +16,12 @@ body.shop .logo path
     text-align: center
     margin: 0 auto 5vw
 
+.shop .wrapper
+    padding: 9rem 0 0 0
+
+.shop .wrapper-inner
+    margin-bottom: 5rem
+
 .shop-wrapper
     display: flex;
     flex-direction: row;
