--- a/src/css/typography.styl
+++ b/src/css/typography.styl
@@ -109,3 +109,8 @@ p,
     &:hover::before 
         transform-origin: 0% 50%;
         transform: scale3d(1, 1, 1);
+
+.uppercase
+    text-transform: uppercase
+    text-align: center
+    font-weight: 600
