--- a/src/css/pages/front.styl
+++ b/src/css/pages/front.styl
@@ -3,3 +3,16 @@
 
 .front .wrapper
     position relative
+
+.img-text
+    position relative
+    position: relative;
+    height: 3rem;
+    overflow: visible;
+    padding: 0 0.5rem
+
+    img
+        height: 4rem;
+        margin-top: -.7rem;
+        border-radius: 4rem;
+        display: block
