--- a/src/css/pages/front.styl
+++ b/src/css/pages/front.styl
@@ -16,3 +16,20 @@
         margin-top: -.7rem;
         border-radius: 4rem;
         display: block
+
+#stars path,
+#stars-2 path
+    fill: var(--main-yellow);
+
+#stars
+    position: absolute;
+    left: 10%;
+    width: 300px;
+    top: 15%;
+
+#stars-2
+    position: absolute;
+    right: 10%;
+    width: 300px;
+    top: 15%;
+    transform: rotate(180deg);
