--- a/assets/main.css
+++ b/assets/main.css
@@ -1173,6 +1173,14 @@ p,
   font-weight: 600;
   line-height: 1.3;
 }
+.fullsize-link {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 1;
+}
 .header {
   position: fixed;
   left: 2.5rem;
@@ -1603,6 +1611,7 @@ body.shop .logo path {
   display: flex;
   flex-direction: row;
   flex-flow: wrap;
+  padding: 0 2.5rem;
 }
 .shop-item {
   width: calc(50% - 1.25rem);
@@ -1611,6 +1620,7 @@ body.shop .logo path {
   animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
   animation-delay: 0.8s;
   opacity: 0;
+  position: relative;
 }
 .shop-item:nth-child(2) {
   animation-delay: 1s;
