--- a/src/css/pages/shop.styl
+++ b/src/css/pages/shop.styl
@@ -26,6 +26,7 @@ body.shop .logo path
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
+    padding: 0 2.5rem
 
 .shop-item 
     width: calc(50% - 1.25rem);
@@ -34,6 +35,7 @@ body.shop .logo path
     animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1)
     animation-delay: .8s;
     opacity: 0
+    position relative
 
     &:nth-child(2)
         animation-delay: 1s;
