--- a/src/css/typography.styl
+++ b/src/css/typography.styl
@@ -115,3 +115,11 @@ p,
     text-align: center
     font-weight: 600
     line-height: 1.3
+
+.fullsize-link
+    position absolute
+    left: 0
+    right: 0
+    bottom: 0
+    top: 0
+    z-index: 1
