--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -21,7 +21,7 @@ html, body
     --main-work-primary: #FF6237
     --main-bg-about: #E43E2C
     --main-about-primary: #FFD24B
-    --main-bg-shop: #1C1C1C
+    --main-bg-shop: #131313
     --main-shop-primary: #E2E2E2
 
 body
