--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -85,4 +85,12 @@ body.nori .logo path
 .col figure,
 .col img
     height: 100%
+
+.push-4-11
+    grid-column-start: 5;
+    grid-column-end: 12;
+
+.push-4-8
+    grid-column-start: 5;
+    grid-column-end: 9;
     
