--- a/src/css/typography.styl
+++ b/src/css/typography.styl
@@ -123,3 +123,10 @@ p,
     bottom: 0
     top: 0
     z-index: 1
+
+a
+    color: currentColor
+    text-decoration: none
+
+.small-margin
+    margin: 0 0 0.5rem
