--- a/src/css/pages/shop.styl
+++ b/src/css/pages/shop.styl
@@ -20,7 +20,7 @@ body.shop .logo path
     padding: 9rem 0 0 0
 
 .shop .wrapper-inner
-    margin-bottom: 5rem
+    margin-bottom: 11.112vw
 
 .shop-wrapper
     display: flex;
