--- a/assets/main.css
+++ b/assets/main.css
@@ -1440,6 +1440,19 @@ body.nori .logo path {
 .nori .header nav a::before {
   background: #4050f7;
 }
+body.hom {
+  background-color: #ebeae7;
+  transition: 0s;
+}
+body.hom .logo path {
+  fill: #dc5842;
+}
+.hom .text-link {
+  color: #dc5842;
+}
+.hom .header nav a::before {
+  background: #dc5842;
+}
 .case .wrapper-inner {
   padding: 0 2.5rem;
   display: grid;
@@ -1448,11 +1461,24 @@ body.nori .logo path {
   color: var(--text);
 }
 .case .wrapper-inner--dark {
-  background: #1e1e1e;
-  margin-top: 11.112vw;
+  background: #161616;
+  margin-top: 5.556vw;
   color: #e2e2e2;
   padding-top: 11.112vw;
-  padding-bottom: 10rem;
+  padding-bottom: 11.112vw;
+}
+.case .wrapper-inner--margin-bottom {
+  margin-bottom: 5.556vw;
+}
+.case .wrapper-inner--no-margin-top {
+  margin-top: 0;
+}
+.case .wrapper-inner--no-margin-bottom {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+.case .wrapper-inner--margin {
+  padding-top: 5.556vw;
 }
 .case-pic-big {
   height: 70vh;
@@ -1473,6 +1499,9 @@ body.nori .logo path {
 }
 .col {
   margin-bottom: 5.556vw;
+}
+.col--small-margin {
+  margin-bottom: 2.778vw;
 }
 .col--no-margin {
   margin-bottom: 0;
@@ -1520,6 +1549,18 @@ body.nori .logo path {
 .push-4-8 {
   grid-column-start: 5;
   grid-column-end: 9;
+}
+.full-width-pic {
+  margin-left: -2.5rem;
+  margin-right: -2.5rem;
+}
+.full-width-pic .case-pic {
+  border-radius: 0;
+}
+.col-12 video {
+  width: 100%;
+  object-fit: cover;
+  height: 100vh;
 }
 body.contact {
   color: #2cafc7;
@@ -1653,7 +1694,7 @@ body.shop .logo path {
   padding: 9rem 0 0 0;
 }
 .shop .wrapper-inner {
-  margin-bottom: 5rem;
+  margin-bottom: 11.112vw;
 }
 .shop-wrapper {
   display: flex;
