--- a/src/css/pages/case.styl
+++ b/src/css/pages/case.styl
@@ -11,6 +11,20 @@ body.nori .logo path
 .nori .header nav a::before 
     background: #4050F7   
 
+
+body.hom 
+    background-color: #EBEAE7
+    transition: 0s;
+
+body.hom .logo path 
+    fill: #DC5842
+
+.hom .text-link
+    color: #DC5842
+
+.hom .header nav a::before 
+    background: #DC5842   
+
 .case .wrapper-inner
     padding: 0 2.5rem;
     display: grid;
@@ -20,11 +34,25 @@ body.nori .logo path
     color: var(--text)
 
     &--dark
-        background: #1e1e1e
-        margin-top: 11.112vw;
+        background: #161616
+        margin-top: 5.556vw;
         color: #E2E2E2
         padding-top: 11.112vw;
-        padding-bottom: 10rem
+        padding-bottom: 11.112vw
+
+    &--margin-bottom
+        margin-bottom: 5.556vw
+
+    &--no-margin-top
+        margin-top: 0
+
+    &--no-margin-bottom
+        margin-bottom: 0
+        padding-bottom: 0
+
+    &--margin
+        padding-top: 5.556vw;
+
 
 .case-pic-big
     height: 70vh;
@@ -46,6 +74,9 @@ body.nori .logo path
 // Grid settings
 .col
     margin-bottom: 5.556vw
+
+    &--small-margin
+        margin-bottom: 2.778vw
 
     &--no-margin
         margin-bottom: 0
@@ -94,3 +125,14 @@ body.nori .logo path
     grid-column-start: 5;
     grid-column-end: 9;
     
+.full-width-pic
+    margin-left: -2.5rem
+    margin-right: -2.5rem
+    
+    .case-pic
+        border-radius: 0
+
+.col-12 video
+    width: 100%
+    object-fit: cover
+    height: 100vh
